--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,15 @@
 # The largest heading
 ## This site was built using [GitHub Pages](https://pages.github.com/).
-###### The smallest heading
+
+## About me
+
+Hi, I'm Mona. You might recognize me as GitHub's mascot.
+
+| Rank | Languages |
+|-----:|-----------|
+|     1| Javascript|
+|     2| Python    |
+|     3| SQL       |
 
 > Text that is a quote
 
